--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,4 +3,4 @@ enable: false
 #没有白名单玩家断开连接提示
 noWhitelistMessage: You are not whitelisted on this server!
 #可以进行白名单操作的成员 多个id用英文逗号分开
-adminList: Frankie_begonia
+adminList: exampleovo,exampleawa
